compiler/src/test/resources/golden/errors/suggest_var.dawn
fn f() -> Int = {
  let count = 1
  count + cont
}
