compiler/src/test/resources/golden/errors/suggest_var.err
error: undefined variable: cont
  --> suggest_var.dawn:3:11
  |
3 |   count + cont
  |           ^^^^
  = hint: did you mean `count`?
